tests/files/parser_tests/should_fail/027.cmdr
//Should not parse due to unterminated parameters
add(a, b {
    return a + b;
}
